Added UI Design with links to best pratice resources. Added link for brainstorming as well.

--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
                   <p>How many problem statements do you have?
                     <input type="number" ng-model="numProblemStatements" min="1"></p>
                    <div class="panel panel-success">
-                      <div class="panel-heading"><i class="fa fa-cutlery"></i> Food for Thought - Rules of Brainstorming</div>
+                      <div class="panel-heading"><i class="fa fa-cutlery"></i> Food for Thought - Rules of Brainstorming<span class="pull-right"><a href="https://loft.io/guide/dfa/design/ideate/brainstorming/" target="_blank"><i class="fa fa-external-link-square"></i></a></span></div>
                       <div class="panel-body">
                        	<ol>
                        		<li>Quantity over Quality</li>
@@ -421,6 +421,42 @@
                        		<li>Encourage Wild Ideas</li>
                        		<li>Visualize Ideas</li>
                        		<li>Stay Focused</li>
+                       	</ol>
+                      </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="panel panel-primary">
+            <div class="panel-heading">
+                <h4 class="panel-title">
+                    <a data-toggle="collapse" data-parent="#accordion" href="#collapseEight">UI/UX Design</a>
+                </h4>
+            </div>
+            <div id="collapseEight" class="panel-collapse collapse">
+                <div class="panel-body">
+                	<div class="panel panel-success">
+                	   <div class="panel-heading"><i class="fa fa-cutlery"></i> Food for Thought - Don Norman's Design Principles<span class="pull-right"><a href="https://drive.google.com/open?id=0B8uO9TUnqIboZlNwY2NOVW1rTEk" target="_blank"><i class="fa fa-external-link-square"></i></a></span></div>
+                	   <div class="panel-body">
+                	    	<ol>
+                	    		<li>Understand users' conceptual models</li>
+                	    		<li>Take advantage of existing affordances</li>
+                	    		<li>Make relevant parts of system visible</li>
+                	    		<li>Take advantage of natural mappings</li>
+                	    		<li>Give useful feedback</li>
+                	    		<li>Be consistent</li>
+                	    	</ol>
+                	   </div>
+                	 </div>
+                   <div class="panel panel-success">
+                      <div class="panel-heading"><i class="fa fa-cutlery"></i> Food for Thought - Principles of Graphic Design<span class="pull-right"><a href="https://drive.google.com/open?id=0B8uO9TUnqIboZlNwY2NOVW1rTEk" target="_blank"><i class="fa fa-external-link-square"></i></a></span></div>
+                      <div class="panel-body">
+                       	<ol>
+                       		<li>Simplicity</li>
+                       		<li>Contrast</li>
+                       		<li>Whitespace</li>
+                       		<li>Proximity</li>
+                       		<li>Alignment</li>
                        	</ol>
                       </div>
                     </div>
