Added stars and made the color for them gold.

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             </div>
             <div id="collapseOne" class="panel-collapse collapse">
                 <div class="panel-body">
-                  <strong><p>Gold-Standard Story</p></strong>
+                  <strong><p><i class="fa fa-star"></i> Gold-Standard Story</p></strong>
                   <div class="table-responsive">
                     <table class="table table-bordered">
                       <thead>
@@ -109,7 +109,7 @@
             </div>
             <div id="collapseTwo" class="panel-collapse collapse">
                 <div class="panel-body">
-                  <strong><p>Gold-Standard Story</p></strong>
+                  <strong><p><i class="fa fa-star"></i> Gold-Standard Story</p></strong>
                   <div class="table-responsive">
                     <table class="table table-bordered">
                       <thead>
@@ -173,7 +173,7 @@
             </div>
             <div id="collapseThree" class="panel-collapse collapse">
                 <div class="panel-body">
-                  <strong><p>Gold-Standard Story</p></strong>
+                  <strong><p><i class="fa fa-star"></i> Gold-Standard Story</p></strong>
                   <div class="table-responsive">
                     <table class="table table-bordered">
                       <thead>
@@ -222,7 +222,7 @@
             </div>
             <div id="collapseFour" class="panel-collapse collapse">
                 <div class="panel-body">
-                  <strong><p>Gold-Standard Story</p></strong>
+                  <strong><p><i class="fa fa-star"></i> Gold-Standard Story</p></strong>
                   <div class="table-responsive">
                     <table class="table table-bordered">
                       <thead>
@@ -262,7 +262,7 @@
             </div>
             <div id="collapseFive" class="panel-collapse collapse">
                 <div class="panel-body">
-                  <strong><p>Gold-Standard Story</p></strong>
+                  <strong><p><i class="fa fa-star"></i> Gold-Standard Story</p></strong>
                   <div class="table-responsive">
                     <table class="table table-bordered">
                       <thead>
@@ -324,7 +324,7 @@
             </div>
             <div id="collapseSix" class="panel-collapse collapse">
                 <div class="panel-body">
-                  <strong><p>Gold-Standard Story</p></strong>
+                  <strong><p><i class="fa fa-star"></i> Gold-Standard Story</p></strong>
                   <div class="table-responsive">
                     <table class="table table-bordered">
                       <thead>
@@ -380,7 +380,7 @@
             </div>
             <div id="collapseSeven" class="panel-collapse collapse">
                 <div class="panel-body">
-                  <strong><p>Gold-Standard Story</p></strong>
+                  <strong><p><i class="fa fa-star"></i> Gold-Standard Story</p></strong>
                   <div class="table-responsive">
                     <table class="table table-bordered">
                       <thead>
