Adds a starting message when there are no claims added

--- a/spiderweb/index.html
+++ b/spiderweb/index.html
@@ -38,7 +38,8 @@
           </div>
         </div> -->
       <div class="row">
-        <div class="col-md-6 col-lg-6 z-depth-2">
+        <div class="col-md-6 col-lg-6 z-depth-2 graphArea valign-wrapper">
+          <p class="valign center-align" id="message">Add a few claims to begin planning!</p>
           <div id="chart"></div>
         </div>
         <div class="col-md-6 col-lg-6">
