Allows for sliders to edit values in the graph

--- a/spiderweb/index.html
+++ b/spiderweb/index.html
@@ -50,7 +50,10 @@
             </span>
         </div>
         <ul class="collection with-header">
-          <li class="collection-header"><h4>Claims</h4></li>
+          <li class="collection-header">
+            <h4>Claims</h4>
+            <p>Use the sliders to indicate how much to increase this sprint</p>
+          </li>
           <!-- <li class="collection-item">
             <p class="claim">Claim 1: Builing Regulation Skills in DTR Students</p>
             <p class="range-field"><input type="range" value="0" class="claimSlider" id="claim1" min="0" max="10" /></p> 
