--- a/spiderweb/index.html
+++ b/spiderweb/index.html
@@ -37,8 +37,6 @@
     <script src="http://ajax.googleapis.com/ajax/libs/angular_material/1.1.0-rc2/angular-material.min.js"></script>
   
     <div class="container-fluid" ng-controller="MyCntrl">
-    <p>Testing: {{(claim1Val)}}</p>
-    
       <div class="row">
         <div class="col-md-6 col-lg-6 z-depth-2 graphArea valign-wrapper">
           <p class="valign center-align" id="message">Add a few claims to begin planning!</p>
@@ -55,6 +53,7 @@
           <li class="collection-header">
             <h4>Claims</h4>
             <p>Use the sliders to indicate how much to increase this sprint</p>
+            <p>Total Points Used: {{total || 0}}</p>
           </li>
         </ul>
                
