--- a/spiderweb/index.html
+++ b/spiderweb/index.html
@@ -49,13 +49,15 @@
               <button class="btn addClaim" type="button" ng-click="addClaim()">+</button>
             </span>
         </div>
-        <ul class="collection with-header">
-          <li class="collection-header">
-            <h4>Claims</h4>
-            <p>Use the sliders to indicate how much to increase this sprint</p>
-            <p>Total Points Used: {{total || 0}}</p>
-          </li>
-        </ul>
+        <div class="claimItems">
+          <ul class="collection with-header">
+            <li class="collection-header">
+              <h4>Claims</h4>
+              <p>Use the sliders to indicate how much to increase this sprint</p>
+              <p>Total Points Used: {{total || 0}}</p>
+            </li>
+          </ul>
+        </div>
                
         </div>
       </div>
