Last changes to DTR Bars for formatting.

--- a/dtr-bars/index.html
+++ b/dtr-bars/index.html
@@ -11,11 +11,11 @@
 </head>
 <body>
 	<div class="container">
-		<h1>Research Questions/Topics</h1>
+		<h1>Research Questions/Contributions</h1>
 		<div id="row-research" class="row">
 			<div id="new-question" class="col-xs-12">
 		    	<div class="input-group">
-		      		<input type="text" class="form-control" placeholder="Write in your Research Question/Topic">
+		      		<input type="text" class="form-control" placeholder="Write in your Research Question/Contribution (Press Enter)">
 		      		<span class="input-group-btn">
 		        		<button class="btn btn-success" type="button">+</button>
 		      		</span>
