--- a/jars/index.html
+++ b/jars/index.html
@@ -11,11 +11,11 @@
 </head>
 <body>
 	<div class="container">
-		<h1>Research Questions/Contributions</h1>
+		<h1>Stories</h1>
 		<div id="row-research" class="row">
-			<div id="new-question" class="col-xs-12">
+			<div id="new-story" class="col-xs-12">
 		    	<div class="input-group">
-		      		<input type="text" class="form-control" placeholder="Write in your Research Question/Contribution (Press Enter)">
+		      		<input type="text" class="form-control" placeholder="Write in your Story (Press Enter)">
 		      		<span class="input-group-btn">
 		        		<button class="btn btn-success" type="button">+</button>
 		      		</span>
@@ -24,10 +24,11 @@
 		</div>
 		
 	</div>
-	<!-- <div id="container" style="height:400px;width:50%;"></div>
-	<div id="drag"></div>
-	<div id="drop"></div> -->
+	<!-- <div id="container" style="height:400px;width:50%;"></div> -->
+	<!-- <div id="drag"></div>
+	<div id="drop"></div>  -->
 </body>
 <script src="http://code.highcharts.com/highcharts.js"></script>
+<script src="http://code.highcharts.com/highcharts-more.js"></script>
 <script src="https://rawgithub.com/highslide-software/draggable-points/master/draggable-points.js"></script>
-<script src="dtr-bars.js"></script>
+<script src="jars.js"></script>
