--- a/spiderweb/index.html
+++ b/spiderweb/index.html
@@ -5,9 +5,6 @@
     <title>Radar chart</title>
     <!-- <script src="http://d3js.org/d3.v3.min.js"></script>
     <script src="RadarChart.js"></script> -->
-    <script src="https://code.highcharts.com/highcharts.js"></script>
-    <script src="https://code.highcharts.com/highcharts-more.js"></script>
-    <script src="https://code.highcharts.com/modules/exporting.js"></script>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="logo" type="image/png" href="demo.png" />
     <!-- Add in Bootstrap & jQuery -->
@@ -37,7 +34,7 @@
 
     <!-- Angular Material Library -->
     <script src="http://ajax.googleapis.com/ajax/libs/angular_material/1.1.0-rc2/angular-material.min.js"></script>
-  
+   
     <div class="container-fluid" ng-controller="MyCntrl">
       <div class="row">
         <div class="col-md-6 col-lg-6 z-depth-2 graphArea valign-wrapper">
@@ -70,7 +67,7 @@
             <li class="collection-header">
               <h4>Claims</h4>
               <p>Use the sliders to indicate how much to increase this sprint</p>
-              <p>Total Points Used: {{total || 0}}</p>
+              <!-- <p>Total Points Used: {{total || 0}}</p> -->
             </li>
           </ul>
         </div>
@@ -78,7 +75,9 @@
         </div>
       </div>
     </div>
-
+    <script src="https://code.highcharts.com/highcharts.js"></script>
+    <script src="https://code.highcharts.com/highcharts-more.js"></script>
+    <script src="https://code.highcharts.com/modules/exporting.js"></script>  
     <script type="text/javascript" src="script.js"></script>
   </body>
 </html>
