--- a/spiderweb/index.html
+++ b/spiderweb/index.html
@@ -67,7 +67,7 @@
             <li class="collection-header">
               <h4>Claims</h4>
               <p>Use the sliders to indicate how much to increase this sprint</p>
-              <!-- <p>Total Points Used: {{total || 0}}</p> -->
+              <p>Total Points Used: {{total || 0}}</p>
             </li>
           </ul>
         </div>
