Now can use draggers to spread the values in the spiderweb chart

--- a/spiderweb/index.html
+++ b/spiderweb/index.html
@@ -3,8 +3,6 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8"/>
     <title>Radar chart</title>
-    <!-- <script src="http://d3js.org/d3.v3.min.js"></script>
-    <script src="RadarChart.js"></script> -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="logo" type="image/png" href="demo.png" />
     <!-- Add in Bootstrap & jQuery -->
@@ -48,7 +46,7 @@
               <button class="btn addClaim" type="button" ng-click="addClaim()">+</button>
             </span>
         </div>
-         <div class="row">
+         <!-- <div class="row">
           <div class="col s12">
             <ul class="tabs">
               <li class="tab col s3"><a href="#test1">Test 1</a></li>
@@ -61,7 +59,7 @@
           <div id="test2" class="col s12">Test 2</div>
           <div id="test3" class="col s12">Test 3</div>
           <div id="test4" class="col s12">Test 4</div>
-        </div>
+        </div> -->
         <div class="claimItems">
           <ul class="collection with-header">
             <li class="collection-header">
