Can now replicate original functionality with Highcharts

--- a/spiderweb/index.html
+++ b/spiderweb/index.html
@@ -37,7 +37,7 @@
       <div class="row">
         <div class="col-md-6 col-lg-6 z-depth-2 graphArea valign-wrapper">
           <p class="valign center-align" id="message">Add a few claims to begin planning!</p>
-          <div id="chart" style="min-width: 400px; max-width: 600px; height: 400px; margin: 0 auto"></div>
+          <div id="chart"></div>
         </div>
         <div class="col-md-6 col-lg-6">
         <div class="input-group">
