Intermediate commit for getting tabbed graph working

--- a/spiderweb/index.html
+++ b/spiderweb/index.html
@@ -46,32 +46,27 @@
               <button class="btn addClaim" type="button" ng-click="addClaim()">+</button>
             </span>
         </div>
-         <!-- <div class="row">
-          <div class="col s12">
-            <ul class="tabs">
-              <li class="tab col s3"><a href="#test1">Test 1</a></li>
-              <li class="tab col s3"><a href="#test2">Test 2</a></li>
-              <li class="tab col s3"><a href="#test3">Test 3</a></li>
-              <li class="tab col s3"><a href="#test4">Test 4</a></li>
-            </ul>
+        <div class="claims-header z-depth-1">
+          <div class="content">
+            <h4>Claims</h4>
+            <p>Use the sliders to indicate how much to increase this sprint</p>
+            <p>Total Points Used: {{total || 0}}</p>
           </div>
-          <div id="test1" class="col s12">Test 1</div>
-          <div id="test2" class="col s12">Test 2</div>
-          <div id="test3" class="col s12">Test 3</div>
-          <div id="test4" class="col s12">Test 4</div>
-        </div> -->
-        <div class="claimItems">
-          <ul class="collection with-header">
-            <li class="collection-header">
-              <h4>Claims</h4>
-              <p>Use the sliders to indicate how much to increase this sprint</p>
-              <p>Total Points Used: {{total || 0}}</p>
-            </li>
+          <ul class="tabs">
+            <li class="tab col s3" id="a1"><a href="#test1">Option 1</a></li>
+            <li class="tab col s3" id="a2"><a href="#test2">Option 2</a></li>
+            <li class="tab col s3" id="a3"><a href="#test3">Option 3</a></li>
+            <li class="tab col s3" id="a4"><a href="#test4">Option 4</a></li>
           </ul>
         </div>
-               
+        <div class="claimItems z-depth-1">
+          <ul class="collection with-header">
+          </ul>
+        </div>
+
         </div>
       </div>
+
     </div>
     <script src="https://code.highcharts.com/highcharts.js"></script>
     <script src="https://code.highcharts.com/highcharts-more.js"></script>
