--- a/spiderweb/index.html
+++ b/spiderweb/index.html
@@ -39,30 +39,28 @@
           <p class="valign center-align" id="message">Add a few claims to begin planning!</p>
           <div id="chart"></div>
         </div>
-        <div class="col-md-6 col-lg-6">
-        <div class="input-group">
-            <input type="text" class="form-control claimInput" placeholder="Write in your Research Question/Topic">
-            <span class="input-group-btn">
-              <button class="btn addClaim" type="button" ng-click="addClaim()">+</button>
-            </span>
-        </div>
-        <div class="claims-header z-depth-1">
-          <div class="content">
-            <h4>Claims</h4>
-            <p>Use the sliders to indicate how much to increase this sprint</p>
-            <p>Total Points Used: {{total || 0}}</p>
+        <div class="col-md-6 col-lg-6 user-input">
+          <div class="input-group">
+              <input type="text" class="form-control claimInput" placeholder="Write in your Research Question/Topic">
+              <span class="input-group-btn">
+                <button class="btn addClaim" type="button" ng-click="addClaim()">+</button>
+              </span>
           </div>
-          <ul class="tabs">
-            <li class="tab col s3" id="a1"><a href="#test1">Option 1</a></li>
-            <li class="tab col s3" id="a2"><a href="#test2">Option 2</a></li>
-            <li class="tab col s3" id="a3"><a href="#test3">Option 3</a></li>
-          </ul>
-        </div>
-        <div class="claimItems z-depth-1">
-          <ul class="collection with-header">
-          </ul>
-        </div>
-
+          <div class="claims-header z-depth-1">
+            <div class="content">
+              <h4>Claims</h4>
+              <p>Use the sliders to indicate how much to increase this sprint</p>
+            </div>
+            <ul class="tabs">
+              <li class="tab col s3" id="a1"><a href="#test1">Option 1</a></li>
+              <li class="tab col s3" id="a2"><a href="#test2">Option 2</a></li>
+              <li class="tab col s3" id="a3"><a href="#test3">Option 3</a></li>
+            </ul>
+          </div>
+          <div class="claimItems z-depth-1">
+            <ul class="collection with-header">
+            </ul>
+          </div>
         </div>
       </div>
 
