Changed placeholder text for entry field

--- a/spiderweb/index.html
+++ b/spiderweb/index.html
@@ -41,7 +41,7 @@
         </div>
         <div class="col-md-6 col-lg-6 user-input">
           <div class="input-group">
-              <input type="text" class="form-control claimInput" placeholder="Write in your Research Question/Topic">
+              <input type="text" class="form-control claimInput" placeholder="Add your current research claims">
               <span class="input-group-btn">
                 <button class="btn addClaim" type="button" ng-click="addClaim()">+</button>
               </span>
